--- a/src/Components/HomePage/HomePage.css
+++ b/src/Components/HomePage/HomePage.css
@@ -836,15 +836,17 @@
         gap: 30px;
         border-radius: 10px;
         cursor: pointer;
+        padding: 15px;
         
     }
     .categories-card:hover{
         border: 2px solid var(--primaryBgColor);
     }
     .categories-card img{
-        width: 150px;
+        width: 100%;
         height: 150px;
         border-radius: 50%;
+        object-fit: cover;
     }
     .categories-card p{
         color: var(--primaryBgColor);
