--- a/src/Components/MyAbout/Listofproducts/Listofproducts.css
+++ b/src/Components/MyAbout/Listofproducts/Listofproducts.css
@@ -207,6 +207,129 @@
     font-size: 16px;
 }
 
+.tableview {
+    width: 100%;
+    height: 100px;
+    background-color: var(--primaryBgColor);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 100px;
+}
+
+.totaldata {
+    /* / width: 40%;/ height: 100%; */
+    display: flex;
+    align-items: center;
+    gap: 30px;
+
+}
+
+.totaldata span {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+table {
+    width: 100%;
+}
+
+.product_table,
+.product_table tr,
+.product_table th,
+.product_table td {
+    border: 1px solid #110404;
+    border-collapse: collapse;
+    text-align: center;
+    padding: 5px;
+    margin-bottom: 20px;
+}
+
+.table-head-row {
+    width: 100%;
+    height: 80px;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.discount-container {
+    width: 100%;
+    height: 60px;
+    background-color: var(--primaryBgColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.bg-color {
+    background-color: var(--primaryBgColor);
+}
+
+.ordered-img {
+    width: 70px;
+    height: 60px;
+    object-fit: cover;
+}
+
+.total-btn {
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid black;
+    color: var(--paraColor);
+    font-weight: 700;
+}
+
+.table-head-1 {
+    width: 10%;
+}
+
+.table-head-2 {
+    width: 30%;
+}
+
+.table-head-3 {
+    width: 15%;
+}
+
+.table-head-4 {
+    width: 10%;
+}
+
+.table-head-5 {
+    width: 5%;
+}
+
+.table-head-6 {
+    width: 15%;
+    padding: 0 15px;
+}
+
+.table-head-7 {
+    width: 10%;
+}
+
+.number-field {
+    width: 100px;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid black;
+    color: var(--paraColor);
+    font-weight: 700;
+    text-align: center;
+    /* outline-color: var(--primaryBgColor);
+    padding: 0 10px; */
+
+}
+
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 @media screen and (max-width:768px) {
     .List1 {
         width: auto;
