--- a/src/Components/Marquee/Marquee(1).css
+++ b/src/Components/Marquee/Marquee(1).css
@@ -5,6 +5,7 @@ marquee{
     padding: 20px 0px;
     display: flex;
     align-items: center;
+    font-size: 13px;
 }
 @media screen and (max-width:768px){
     marquee{
