--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -7,6 +7,7 @@
     padding: 0px;
     font-size: 16px;
     background-color: black;
+    padding: 20px;
 }
 a{
     list-style: none;
@@ -32,7 +33,6 @@ a{
 }
 .navbarTitle img{
     width: 260px;
-    border-radius: 100%;
 }
 .navbarTitle h3{
     margin-left: 10px;
