--- a/src/Components/Marquee/Marquee.css
+++ b/src/Components/Marquee/Marquee.css
@@ -13,8 +13,8 @@ marquee{
     marquee{
         height: 30px;
         display: flex;
-        font-size: 16px;
-        background-color: aqua;
+        font-size: 10px;
+        background-color: yellow;
         font-weight: 800;
         margin-top: 85px;
     }
