--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -151,13 +151,13 @@ marquee{
     .navbar{
         width: 100%;
         height: 75px;
-        color: black;
+        color: white;
         display: flex;
         align-items: center;
         justify-content:space-between;
         padding: 20px;
         font-size: 16px;
-        background-color:#102447;
+        background-color:black;
         position: fixed;
         z-index: 9999;
         color: #e6e7eb;
@@ -224,7 +224,7 @@ marquee{
     }
     .navbarTitle img{
         width: 140px;
-        border-radius: 100%;
+        border-radius:0;
     }
     .navbarTitle h3{
         margin-left: 10px;
