--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -324,8 +324,8 @@
         position: relative;
 
     }
-    .navbarTitle img{
-        width: 200px;
+    .footer2 .navbarTitle img{
+        width: 250px;
     }
 
     .footer2 h2 {
