--- a/src/Pages/MyHomepages.css
+++ b/src/Pages/MyHomepages.css
@@ -2,6 +2,11 @@
     width: 100%;
     height: 85vh;
 }
+.ch{
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
 .home-section img{
     width: 100%;
     height: 100%;
@@ -670,8 +675,8 @@
 }
 /* The entire scrollbar */
 ::-webkit-scrollbar {
-    width: 12px; /* Width of the scrollbar */
-    height: 12px; /* Height of the scrollbar for horizontal scrolling */
+    width: 0px; /* Width of the scrollbar */
+    height: 0px; /* Height of the scrollbar for horizontal scrolling */
 }
 
 /* The part of the scrollbar that moves */
@@ -1292,8 +1297,8 @@
     }
     /* The entire scrollbar */
     ::-webkit-scrollbar {
-        width: 12px; /* Width of the scrollbar */
-        height: 12px; /* Height of the scrollbar for horizontal scrolling */
+        width: 0px; /* Width of the scrollbar */
+        height: 0px; /* Height of the scrollbar for horizontal scrolling */
     }
     
     /* The part of the scrollbar that moves */
