--- a/src/Components/Navbar/Navbar(1).css
+++ b/src/Components/Navbar/Navbar(1).css
@@ -30,7 +30,7 @@ a{
     align-items: center;
     justify-content: space-between;
 }
-.navbarTitle img{
+.footercontent img{
     width: 200px;
     border-radius: 100%;
 }
