--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -7,6 +7,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 30px 0;
 }
 
 .footer1 {
@@ -22,6 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .footercontent {
@@ -30,6 +32,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    /* margin-top: 30px; */
 }
 
 .footer2 h2 {
@@ -45,7 +48,11 @@
     margin-right: 30px;
 
 }
-
+.f1 img{
+    height: 120px;
+    width: 300px;
+    margin-bottom: 20px;
+}
 .f1 p {
     font-size: 16px;
     line-height: 25px;
@@ -195,7 +202,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 30px;
     border-top: 1px solid white;
 }
 
