--- a/src/Pages/MyHomepages.css
+++ b/src/Pages/MyHomepages.css
@@ -42,6 +42,14 @@
     font-weight: 500;
     text-align: start;
 }
+.categorysection{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4,3fr);
+    grid-gap: 30px;
+    padding: 0px;
+    margin: 20px 0px;
+}
 .header-container h1 span{
     color:blue;
 }
@@ -1060,6 +1068,14 @@
         width: 90%;
         height: 100%;
         margin: 0 auto;
+    }
+    .categorysection{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,2fr);
+        grid-gap: 30px;
+        padding: 0px;
+        margin: 20px 0px;
     }
     .about-us-boxes-container{
         width: 100%;
