--- a/src/Components/Invoice/invoice.css
+++ b/src/Components/Invoice/invoice.css
@@ -7,6 +7,7 @@
     margin-top: 2rem;
 }
 
+
 .DwldIc {
     font-weight: 900;
     font-size: 15px;
@@ -17,6 +18,7 @@
     gap: 2rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
+    padding: 20px;
 }
 
 .DwldButton {
@@ -62,12 +64,11 @@
 }
 
 .InvoiceDecreaseWidthContainer {
-    width: 55%;
+    width: 60%;
     background-color: #FFFFFF;
     margin: 0 auto;
-    padding: 35px 40px 10px 40px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    padding-bottom: 5rem;
+    padding: 30px;
 }
 
 .InvoiceLogo {
@@ -88,7 +89,7 @@
 }
 
 .InvoiceSideContainer {
-    width: 32%;
+    width: 30%;
     text-align: end;
 }
 
@@ -100,6 +101,7 @@
 }
 
 .InvoiceDetails {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 5px;
@@ -108,11 +110,11 @@
 .Details {
     display: flex;
     align-items: start;
-    gap: 30px;
+    gap: 20px;
 }
 
 .TdHead {
-    width: 100px;
+    width:70px;
 }
 
 .SingleTable {
@@ -179,7 +181,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 5rem;
+    margin-top: 1rem;
 }
 
 .TotalBtn h4 {
@@ -269,7 +271,9 @@
         width: 95%;
         padding: 15px;
     }
-
+    .ThankingContainer .Header{
+        font-size: 20px;
+    }
     .InvoiceSideContainer {
         width: 50%;
     }
